sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:7: error: not found: value exit
    exit();
    ^AlgBubbleSort1: error: not enough arguments for method bubbleSort: (tab: Array[Int])Unit.
Unspecified value parameter tab.
		bubbleSort();
                          ^